# fp-strukdat

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  run  run.sh  simulasi
include/algorithms/: BruteForce.h  CollisionDetector.h  QuadTree.h
include/core/: Config.h  Particle.h
sfml-3.0.2/doc/: Angle_8hpp.html  Angle_8hpp_source.html  AudioResource_8hpp.html  AudioResource_8hpp_source.html  Audio_2Export_8hpp.html  Audio_2Export_8hpp_source.html  Audio_8hpp.html  Audio_8hpp_source.html  BlendMode_8hpp.html  BlendMode_8hpp_source.html  CircleShape_8hpp.html  CircleShape_8hpp_source.html  Clipboard_8hpp.html  Clipboard_8hpp_source.html  Clock_8hpp.html  Clock_8hpp_source.html  Color_8hpp.html  Color_8hpp_source.html  Config_8hpp.html  Config_8hpp_source.html  ContextSettings_8hpp.html  ContextSettings_8hpp_source.html  Context_8hpp.html  Context_8hpp_source.html  ConvexShape_8hpp.html  ConvexShape_8hpp_source.html  CoordinateType_8hpp.html  CoordinateType_8hpp_source.html  Cursor_8hpp.html  Cursor_8hpp_source.html  Drawable_8hpp.html  Drawable_8hpp_source.html  Err_8hpp.html  Err_8hpp_source.html  Event_8hpp.html  Event_8hpp_source.html  Exception_8hpp.html  Exception_8hpp_source.html  FileInputStream_8hpp.html  FileInputStream_8hpp_source.html  (+466 more)
sfml-3.0.2/examples/ftp/: ftp
sfml-3.0.2/lib/: libsfml-audio.3.0.2.dylib  libsfml-graphics.3.0.2.dylib  libsfml-network.3.0.2.dylib  libsfml-system.3.0.2.dylib  libsfml-window.3.0.2.dylib
src/: main.cpp
src/algorithms/: BruteForce.cpp  CollisionDetector.cpp  QuadTree.cpp
src/core/: Particle.cpp
(+52 files in other folders)
